# writer-editor-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/: 01-project-summary.md  04-tutorial-book-extension.md  05-tutorial-book-extension-ko.md  06-general-purpose-book-system.md  07-execution-examples.md  07-usage-guide.md  08-troubleshooting-lm-studio.md  09-error-analysis.md  10-improvement-proposals.md  api-reference.md  implementation-guide.md  multi-agent-architecture.md
output/books/애플의_역사/: README.md  chapter_01.md
src/: __init__.py
src/agents/: __init__.py  bibliography_agent.py  book_coordinator_agent.py  business_analyst.py  code_example_agent.py  content_strategist.py  cross_reference_agent.py  diagram_agent.py  editor.py  exercise_generator.py  fact_check_agent.py  math_formula_agent.py  outline_reviewer.py  web_search_agent.py  writer.py
src/config/: __init__.py  settings.py
src/export/: __init__.py  export_manager.py
src/graph/: __init__.py  state.py  workflow.py
src/llm/: __init__.py  client.py
src/templates/: __init__.py  outline_templates.py
src/tools/: __init__.py  search_tools.py
src/ui/: __init__.py  cli.py
src/utils/: __init__.py  code_validator.py  export_manager.py
