[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "writer-editor-agent"
version = "0.1.0"
description = "Writer-Editor Review Loop Agent System with LangGraph"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.31",
    "langgraph-checkpoint-sqlite>=1.0.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
